@@ -4,11 +4,9 @@ import br.com.fiap.fiapfood.core.usecase.usuario.*;
 import br.com.fiap.fiapfood.entrypoint.api.dto.UsuarioDTO;
 import br.com.fiap.fiapfood.entrypoint.api.mapper.UsuarioMapper;
 import br.com.fiap.fiapfood.entrypoint.facade.UsuarioFacade;
-import br.com.fiap.fiapfood.core.entity.UsuarioDomain;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class UsuarioFacadeImp implements UsuarioFacade {
@@ -19,35 +17,32 @@ public class UsuarioFacadeImp implements UsuarioFacade {
     private final BuscarUsuarioPorCPF buscarUsuarioPorCPF;
     private final ApagarUsuario apagarUsuario;
 
-    private final UsuarioMapper usuarioMapper;
-
-    public UsuarioFacadeImp(SalvarUsuario salvarUsuario, BuscarUsuarioPorID buscarUsuarioPorID, BuscarTodosUsuarios buscarTodosUsuarios, BuscarUsuarioPorCPF buscarUsuarioPorCPF, ApagarUsuario apagarUsuario, UsuarioMapper usuarioMapper) {
+    public UsuarioFacadeImp(SalvarUsuario salvarUsuario, BuscarUsuarioPorID buscarUsuarioPorID, BuscarTodosUsuarios buscarTodosUsuarios, BuscarUsuarioPorCPF buscarUsuarioPorCPF, ApagarUsuario apagarUsuario) {
         this.salvarUsuario = salvarUsuario;
         this.buscarUsuarioPorID = buscarUsuarioPorID;
         this.buscarTodosUsuarios = buscarTodosUsuarios;
         this.buscarUsuarioPorCPF = buscarUsuarioPorCPF;
         this.apagarUsuario = apagarUsuario;
-        this.usuarioMapper = usuarioMapper;
     }
+
 
     @Override
     public UsuarioDTO salvar(UsuarioDTO usuarioDTO) {
-        UsuarioDomain usuarioDomain = usuarioMapper.toUsuarioDomainFromDTO(usuarioDTO);
-        usuarioDomain = salvarUsuario.call(usuarioDomain);
-        return usuarioMapper.toUsuarioDTOFromDomain(usuarioDomain);
+        return UsuarioMapper.toUsuarioDTOFromDomain(
+                salvarUsuario.call(
+                        UsuarioMapper.toUsuarioDomainFromDTO(usuarioDTO)));
     }
 
     @Override
     public UsuarioDTO buscarPorId(Long id) {
-        UsuarioDomain usuarioDomain = buscarUsuarioPorID.call(id);
-        return usuarioMapper.toUsuarioDTOFromDomain(usuarioDomain);
+        return UsuarioMapper.toUsuarioDTOFromDomain(buscarUsuarioPorID.call(id));
     }
 
     @Override
     public List<UsuarioDTO> buscarTodos() {
         return buscarTodosUsuarios.call().stream()
-                .map(usuarioDomain -> usuarioMapper.toUsuarioDTOFromDomain(usuarioDomain))
-                .collect(Collectors.toList());
+                .map(UsuarioMapper::toUsuarioDTOFromDomain)
+                .toList();
     }
 
     @Override
@@ -57,7 +52,6 @@ public class UsuarioFacadeImp implements UsuarioFacade {
 
     @Override
     public UsuarioDTO buscarPorCPF(String cpf) {
-        UsuarioDomain usuarioDomain = buscarUsuarioPorCPF.call(cpf);
-        return usuarioMapper.toUsuarioDTOFromDomain(usuarioDomain);
+        return UsuarioMapper.toUsuarioDTOFromDomain(buscarUsuarioPorCPF.call(cpf));
     }
 }
